Fri Apr 30 15:24:58 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/socket/addrinfo.h: compatibility hack for ipv4.

	* ext/socket/socket.c: itojun's ipv6 patches applied.

	* ext/socket/extconf.rb: detect ipv6 features based on itojun's
	  ipv6 patches.

	* ext/extmk.rb.in (enable_config): can handle --enable-xxx now.

	* lib/mkmf.rb (enable_config): ditto.

Tue Apr 27 14:11:45 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (fname): lazy workaround for keywords did not work well.

	* ext/extmk.rb.in: `--with-xxx=yyy' argument configuration.

	* misc/ruby-mode.el: forgot to handle $`.

	* ext/extmk.rb.in: better AIX link support proposed by
	  <komatsu@sarion.co.jp>.

Mon Apr 26 16:46:59 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/extmk.rb.in: AIX shared library support modified.

	* ext/aix_mksym.rb: ditto.

	* configure.in: ditto.

	* sprintf.c (rb_f_sprintf): should allocate proper sized buffer
	  for float numbers.

Sat Apr 24 00:00:16 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (operation): syntax like `a.[]=(1,2)' is allowed.

Fri Apr 23 23:54:09 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (argf_binmode): binmode method added to ARGF.

Fri Apr 23 13:55:22 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (rb_f_chomp): should assign the result to $_.  or maybe
	  sub/gsub/chop/chomp should NOT assign $_ altogether.

Thu Apr 22 16:50:54 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_callcc): call scope_dup() for all scopes in
	  the interpreter stack.

Tue Apr 20 11:24:18 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (rb_str_dump): `#' should be escaped.

Tue Apr 20 02:32:42 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (parse_regx): option /p for posix match added.

	* re.c (rb_reg_desc): did not print options properly.

	* io.c (rb_file_s_open): intialize was called twice.

Mon Apr 19 18:56:21 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
