@@ -357,7 +357,7 @@ main() {
     with_dln_a_out=yes
     host_os=${host_os}-a_out
   else
-    XLDFLAGS="-rdynamic"
+    LDFLAGS="-rdynamic"
   fi;;
 esac
 
@@ -395,11 +395,11 @@ if test "$with_dln_a_out" != yes; then
   case "$host_os" in
 	hpux*)		DLDFLAGS="-E"
 			LDSHARED='ld -b'
-			XLDFLAGS="-Wl,-E"
+			LDFLAGS="-Wl,-E"
 			rb_cv_dlopen=yes;;
 	solaris*) 	if test "$GCC" = yes; then
 			   LDSHARED='gcc -Wl,-G'
-			   `$CC --print-prog-name=ld` -v 2>&1 | grep "GNU ld" > /dev/null && XLDFLAGS="-Wl,-E"
+			   `$CC --print-prog-name=ld` -v 2>&1 | grep "GNU ld" > /dev/null && LDFLAGS="-Wl,-E"
 			else
 			   LDSHARED='ld -G'
 			fi
@@ -419,7 +419,7 @@ if test "$with_dln_a_out" != yes; then
 	freebsd*)       LDSHARED="gcc -shared"
 			if test -x /usr/bin/objformat && \
 			   test `/usr/bin/objformat` = "elf" ; then
-			    XLDFLAGS="-rdynamic"
+			    LDFLAGS="-rdynamic"
 			    DLDFLAGS='-Wl,-soname,$(.TARGET)'
 			    rb_cv_freebsd_elf=yes
 			else
@@ -429,7 +429,7 @@ if test "$with_dln_a_out" != yes; then
 	netbsd*) 	LDSHARED="ld -Bshareable"
 			case "$host_cpu" in
 			alpha|mips)
-				XLDFLAGS="-export-dynamic" ;;
+				LDFLAGS="-export-dynamic" ;;
 			*)
 				;;
 			esac
