@@ -11,6 +11,12 @@ Fri Apr 30 15:24:58 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* lib/mkmf.rb (enable_config): ditto.
 
+Thu Apr 29 18:55:31 1999  WATANABE Hirofumi  <eban@os.rim.or.jp>
+
+	* dln.c (conv_to_posix_path): remove const from args.
+
+	* ruby.c (rubylib_mangle): remove Fatal(), the obsolete function.
+
 Tue Apr 27 14:11:45 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* parse.y (fname): lazy workaround for keywords did not work well.
@@ -97,7 +103,7 @@ Fri Apr 16 15:09:20 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* config.guess: avoid 'linux-gnu' for alpha-unknown-linux.
 
-Thu Apr 15 23:46:20 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
+	Thu Apr 15 23:46:20 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
 
 	* ruby.c (rubylib_mangle): mangle path by RUBYLIB_PREFIX.
 
